# hello-mcp

./: README.md
basic_server/: generate_parquet.py  main.py  pyproject.toml  server.py
basic_server/data/: sample.parquet
basic_server/tools/: csv_tools.py  parquet_tools.py
basic_server/utils/: file_reader.py  llm_processing.py
gemini_basic/: hello_gemini.py
